examples/src/main/java/eu/binarystars/cleancode/errors/ServiceException.java
package eu.binarystars.cleancode.errors;

abstract class ServiceException extends RuntimeException {
}
